--- a/task_04/makefile
+++ b/task_04/makefile
@@ -1,5 +1,13 @@
-all: main.cpp
-	gcc main.cpp -o run -lstdc++ -Wall -Werror -pthread -fsanitize=address 
- 
+CC = g++
+LIBS = 
+CFLAGS = -Wall -Werror -std=gnu++11
+
+PROGS = is_sorted thread_merge_sort array_generator
+
+all: $(PROGS)
+
+% : %.cpp
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 clean:
-	rm run
+	rm -f $(PROGS)
